# media-tools

./: .gitignore  README.md  main.py  media-tools.desktop  pyproject.toml  run-win.bat  run.sh
media_tools/backend/: convert.py  demucs_sep.py  download.py  format_match.py  info.py  separate.py  sysmon.py  url_probe.py  url_suggest.py
media_tools/core/: cancel.py  config.py  devices.py  options.py  text.py  theme.py  tools.py  weights.py
media_tools/gui/: app.py  log_panel.py  util.py  worker.py
media_tools/gui/tabs/: convert.py  download.py  separate.py
media_tools/gui/widgets/: info_panel.py  sys_meters.py
