[project]
name = "media-tools"
version = "0.1.0"
description = "Unified GUI for the user's media workflow: download, inspect, convert, separate stems."
requires-python = ">=3.11,<3.12"
dependencies = [
    "PySide6>=6.7",

    # PyTorch — the build is selected per-platform by [tool.uv.sources] below:
    # ROCm on Linux (AMD), CUDA on Windows (NVIDIA), default/CPU elsewhere.
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "pytorch-triton-rocm==3.5.1 ; sys_platform == 'linux'",

    # Bundled external tools, so nothing has to be installed by hand:
    # yt-dlp is invoked as a module; static-ffmpeg supplies ffmpeg + ffprobe.
    "yt-dlp",
    "static-ffmpeg",

    # MSST inference deps (mirrors what was proven to work in ~/Scripts/Music-Source-Separation-Training)
    "numpy<2",
    "pandas",
    "scipy",
    "soundfile",
    "ml_collections",
    "tqdm",
    "segmentation_models_pytorch==0.3.3",
    "timm==0.9.2",
    "audiomentations==0.24.0",
    "pedalboard~=0.8.1",
    "omegaconf==2.2.3",
    "beartype==0.14.1",
    "rotary_embedding_torch==0.3.5",
    "einops==0.8.1",
    "librosa",
    "demucs==4.0.0",
    "transformers~=4.35.0",
    "torchmetrics==0.11.4",
    "spafe==0.3.2",
    "protobuf==3.20.3",
    "torch_audiomentations",
    "asteroid==0.7.0",
    "auraloss",
    "torchseg",
    "huggingface-hub>=0.23.0",
    "torch_log_wmse>=0.3.1",
    "loralib",
    "matplotlib",
    "hyper_connections==0.1.11",
    "pytorch_lightning",
    "pyloudnorm",
    "pyyaml",
    "wandb",
    "requests",
    "setuptools<81",  # librosa imports pkg_resources which was removed in setuptools 81
    "psutil",
]

# Select the PyTorch build per platform. `torch-backend = "auto"` was unreliable
# (it installed a CUDA build on an AMD/Linux machine, so the GPU went unused), so
# we pin explicit indexes instead:
#   Linux  -> ROCm 6.3  (AMD; the primary dev target)
#   Windows-> CUDA 12.8 (NVIDIA friends; AMD-on-Windows falls back to CPU at runtime)
#   macOS  -> default wheels (CPU/MPS)
[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["media_tools"]
